--- a/app/templates/historico.html
+++ b/app/templates/historico.html
@@ -78,78 +78,61 @@
                 <div id="selection-counter" class="selection-counter">Nenhum item selecionado</div>
             </div>
 
-            <table class="table-uppercase">
-                <thead>
-                    <tr>
-                        <th style="width: 30px;"><input type="checkbox" id="select-all-checkbox"></th>
-                        <th>Data</th>
-                        <th>Tipo</th>
-                        <th>Nível</th> <th>Descrição</th>
-                        <th>Colaborador</th>
-                        <th>Status</th>
-                        <th style="width: 80px; text-align: center;">Detalhes</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for atividade in lista_atividades %}
-                    <tr>
-                        <td><input type="checkbox" name="selecao_ids" value="{{ atividade.id }}" class="row-checkbox"></td>
-
-                        <td>{{ atividade.data_atendimento.strftime('%d/%m/%Y %H:%M') if atividade.data_atendimento }}</td>
-
-                        <td>{{ atividade.tipo_atendimento }}</td>
-
-                        <td>{{ atividade.nivel_complexidade }}</td>
-
-                        <td class="truncate">{{ atividade.descricao }}</td>
-
-                        <td>{{ atividade.colaborador_nome }}</td>
-
-                        <td>{{ atividade.status }}</td>
-
-                        <td class="actions-cell">
-                            <button type="button" class="btn-action btn-details"
-                                    data-id="{{ atividade.id }}"
-                                    data-data="{{ atividade.data_atendimento.strftime('%d/%m/%Y %H:%M') if atividade.data_atendimento }}"
-                                    data-tipo="{{ atividade.tipo_atendimento }}"
-                                    data-colaborador="{{ atividade.colaborador_nome }}"
-                                    data-status="{{ atividade.status }}"
-                                    data-descricao="{{ atividade.descricao }}">
-                                <i class="fas fa-eye"></i>
-                            </button>
-                        </td>
-                    </tr>
-                    {% else %}
-                    <tr>
-                        <td colspan="8" style="text-align: center;">Nenhuma atividade encontrada.</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+            <div class="table-container">
+                <table class="table-uppercase">
+                    <thead>
+                        <tr>
+                            <th style="width: 30px;"><input type="checkbox" id="select-all-checkbox"></th>
+                            <th>Data</th>
+                            <th>Tipo</th>
+                            <th>Nível</th>
+                            <th>Descrição</th>
+                            <th>Colaborador</th>
+                            <th>Status</th>
+                            <th style="width: 80px; text-align: center;">Detalhes</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for atividade in lista_atividades %}
+                        <tr>
+                            <td><input type="checkbox" name="selecao_ids" value="{{ atividade.id }}" class="row-checkbox"></td>
+                            <td>{{ atividade.data_atendimento.strftime('%d/%m/%Y %H:%M') if atividade.data_atendimento }}</td>
+                            <td>{{ atividade.tipo_atendimento }}</td>
+                            <td>{{ atividade.nivel_complexidade }}</td>
+                            <td class="truncate">{{ atividade.descricao }}</td>
+                            <td>{{ atividade.colaborador_nome }}</td>
+                            <td>{{ atividade.status }}</td>
+                            <td class="actions-cell">
+                                <button type="button" class="btn-action btn-details"
+                                        data-id="{{ atividade.id }}"
+                                        data-data="{{ atividade.data_atendimento.strftime('%d/%m/%Y %H:%M') if atividade.data_atendimento }}"
+                                        data-tipo="{{ atividade.tipo_atendimento }}"
+                                        data-colaborador="{{ atividade.colaborador_nome }}"
+                                        data-status="{{ atividade.status }}"
+                                        data-descricao="{{ atividade.descricao }}">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                            </td>
+                        </tr>
+                        {% else %}
+                        <tr>
+                            <td colspan="8" style="text-align: center;">Nenhuma atividade encontrada.</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </form>
     </div>
 
     {% if total_pages > 1 %}
     <div class="pagination">
-        {% if current_page > 1 %}
-            <a href="{{ url_for('historico', page=current_page-1, **filtros_aplicados) }}">&laquo;</a>
-        {% else %}
-            <span class="disabled">&laquo;</span>
-        {% endif %}
-
-        {% for page_num in range(1, total_pages + 1) %}
-            {% if page_num == current_page %}
-                <span class="active">{{ page_num }}</span>
-            {% else %}
-                <a href="{{ url_for('historico', page=page_num, **filtros_aplicados) }}">{{ page_num }}</a>
-            {% endif %}
-        {% endfor %}
-
-        {% if current_page < total_pages %}
-            <a href="{{ url_for('historico', page=current_page+1, **filtros_aplicados) }}">&raquo;</a>
-        {% else %}
-            <span class="disabled">&raquo;</span>
-        {% endif %}
+        {% if current_page > 1 %}<a href="{{ url_for('historico', page=current_page-1, **filtros_aplicados) }}">&laquo;</a>{% else %}<span class="disabled">&laquo;</span>{% endif %}
+        {% set max_pages_to_show = 10 %}{% set start_page = [1, current_page - 4] | max %}{% set end_page = [total_pages, start_page + max_pages_to_show - 1] | min %}
+        {% if start_page > 1 %}<a href="{{ url_for('historico', page=1, **filtros_aplicados) }}">1</a>{% if start_page > 2 %}<span class="disabled">...</span>{% endif %}{% endif %}
+        {% for page_num in range(start_page, end_page + 1) %}{% if page_num == current_page %}<span class="active">{{ page_num }}</span>{% else %}<a href="{{ url_for('historico', page=page_num, **filtros_aplicados) }}">{{ page_num }}</a>{% endif %}{% endfor %}
+        {% if end_page < total_pages %}{% if end_page < total_pages - 1 %}<span class="disabled">...</span>{% endif %}<a href="{{ url_for('historico', page=total_pages, **filtros_aplicados) }}">{{ total_pages }}</a>{% endif %}
+        {% if current_page < total_pages %}<a href="{{ url_for('historico', page=current_page+1, **filtros_aplicados) }}">&raquo;</a>{% else %}<span class="disabled">&raquo;</span>{% endif %}
     </div>
     {% endif %}
 
@@ -157,8 +140,7 @@
         <div class="modal-content">
             <button class="modal-close" id="close-details-modal-btn">&times;</button>
             <h2><i class="fas fa-info-circle icon-title"></i> Detalhes da Atividade</h2>
-            <div id="modal-body">
-                </div>
+            <div id="modal-body"></div>
         </div>
     </div>
 {% endblock %}
