--- a/app/templates/editar_atividade.html
+++ b/app/templates/editar_atividade.html
@@ -3,7 +3,11 @@
 {% block title %}Editar Atividade{% endblock %}
 
 {% block content %}
-    <h1><i class="fas fa-pencil-alt icon-title"></i> Editar Atividade #{{ atividade.id }}</h1>
+<div class="content-container">
+
+    <div class="page-header">
+        <h1 class="page-title"><i class="fas fa-pencil-alt"></i> Editar Atividade #{{ atividade.id }}</h1>
+        </div>
 
     <div class="info-card form-card">
         <form method="POST" action="{{ url_for('editar_atividade', id=atividade.id) }}">
@@ -17,4 +21,6 @@
 
         </form>
     </div>
+
+</div>
 {% endblock %}
